# nexo-plus-project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/routes/: alerts.py  guidelines.py  ingestion.py  measurements.py  patients.py  system.py
backend/app/services/: ai_service.py  clinical_parameters.py
backend/tests/: conftest.py
backend/tests/routes/: __init__.py  test_alerts.py  test_system.py
docs/: lean_canvas.md  presentation_optimization.md  rubric_analysis.md
docs/presentations/: demo_script.md  hackathon_pitch.md  pitch_script.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/ideas/: About.tsx  Contact.tsx  Features.tsx  Hero.tsx
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: About.tsx  Contact.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx
frontend/src/components/ui/: calendar.tsx  use-toast.ts
frontend/src/pages/: Dashboard.tsx  GuiasPage.tsx  Index.tsx  Login.tsx  MedicionesPage.tsx  NuevaMedicionPage.tsx  PacientesPage.tsx  PatientDetailPage.tsx  Registro.tsx
frontend/src/types/: database.ts  index.ts
